fix: Change css so the arrows appear in the same place without overlapping the space of the card

--- a/webapp/src/components/HomePage/Slideshow/Slideshow.css
+++ b/webapp/src/components/HomePage/Slideshow/Slideshow.css
@@ -111,9 +111,7 @@
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 0;
   width: 80px;
-  height: 100%;
   z-index: 5;
 }
 
